syntax = "proto3";

package auth;
option go_package = "./auth";


message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string token = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  string message = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  int32 user_id = 1;
}

message User {
  int32 id = 1;
  string username = 2;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}